# FlexUpdateMcBot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release-all.yml  build-release.yml  build.yml  release.yml  update-azalea.yml  update-bot.yml
bot/: Cargo.toml  rust-toolchain.toml
bot/src/: main.rs
codegen/: LATEST_AZALEA_OID  requirements.txt  update_azalea.py  webhook_notifier.py
common/: Cargo.toml
common/src/: lib.rs
tools/: Cargo.toml  README.md
tools/src/: build_bot.rs  lib.rs  main.rs  update_bot.rs
versions/1.19.2/: Cargo.toml  rust-toolchain
versions/1.19.2/src/: main.rs
versions/1.19.3/: Cargo.toml
versions/1.19.4/: Cargo.toml  rust-toolchain
versions/1.20.1/: Cargo.toml  rust-toolchain
versions/1.20.2/: Cargo.toml
versions/1.20.4/: Cargo.toml  rust-toolchain
versions/1.20.5/: Cargo.toml  rust-toolchain
versions/1.20.6/: Cargo.toml  rust-toolchain
versions/1.21.1/: Cargo.toml  rust-toolchain
versions/1.21.10/: Cargo.toml  rust-toolchain
versions/1.21.11/: Cargo.toml  rust-toolchain
versions/1.21.3/: Cargo.toml  rust-toolchain
versions/1.21.4/: Cargo.toml
versions/1.21.5/: Cargo.toml  rust-toolchain
versions/1.21.6/: Cargo.toml  rust-toolchain
versions/1.21.7/: Cargo.toml  rust-toolchain
versions/1.21.7/src/: main.rs
versions/1.21.8/: Cargo.toml  rust-toolchain
versions/1.21.9/: Cargo.toml  rust-toolchain
versions/1.21.9/src/: main.rs
