[dependencies]
anyhow = "1.0.98"
tokio = "1.45.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "319d144995e0ca635806941cbb5d6ceaf0fcf515"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "319d144995e0ca635806941cbb5d6ceaf0fcf515"
package = "azalea-client"

[package]
edition = "2024"
version = "0.1.0"
name = "flex-update-mc-bot"

[package.metadata]
mc_version = "1.21.5"
