[dependencies]
anyhow = "1.0.98"
tokio = "1.45.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "a060b739158d9ff2cc3d7ecb13e79de091f1f055"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "a060b739158d9ff2cc3d7ecb13e79de091f1f055"
package = "azalea-client"

[package]
edition = "2024"
version = "0.1.0"
name = "flex-update-mc-bot"

[package.metadata]
mc_version = "1.21.6"
