[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = "1.45.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "6f9ffccde3e9ffde57811db19dd184b16f56bc83"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "6f9ffccde3e9ffde57811db19dd184b16f56bc83"
package = "azalea-client"
