[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
tokio = "1.26.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "118f649cf7a6e401ee2eccd385b04a5478fdd311"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "118f649cf7a6e401ee2eccd385b04a5478fdd311"
package = "azalea-client"
