[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
tokio = "1.28.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "587ff91f16a3cae0bfe89e6781ad519ad66980b6"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "587ff91f16a3cae0bfe89e6781ad519ad66980b6"
package = "azalea-client"
