[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
tokio = "1.37.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "0c05b4cd4271e3194c9bb8a265f8cc771b0f512b"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "0c05b4cd4271e3194c9bb8a265f8cc771b0f512b"
package = "azalea-client"
