[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
tokio = "1.42.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "5a460f38710b410399cb6750ff803e42b5989d6f"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "5a460f38710b410399cb6750ff803e42b5989d6f"
package = "azalea-client"
