[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = "1.38.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "f35ba028f66ea9137a4326432c05f9254d0c67ce"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "f35ba028f66ea9137a4326432c05f9254d0c67ce"
package = "azalea-client"
