[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
tokio = "1.40.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "dfcb7c30aa17849711f5bde595c00d5e807c2eb1"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "dfcb7c30aa17849711f5bde595c00d5e807c2eb1"
package = "azalea-client"
