[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "0110c630aed4b1800a94c22f74a2403df6f30295"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "0110c630aed4b1800a94c22f74a2403df6f30295"
package = "azalea-client"

[dependencies.common]
path = "../../common"