[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "ce1656e3768af75105ecf5b9f3d57be98453dd32"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "ce1656e3768af75105ecf5b9f3d57be98453dd32"
package = "azalea-client"

[dependencies.common]
path = "../../common"