[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "9bfb1705afb8a48ceace712bc4ee8c0b4d507f49"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "9bfb1705afb8a48ceace712bc4ee8c0b4d507f49"
package = "azalea-client"

[dependencies.common]
path = "../../common"