[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "82ad975242292d5875780b4398b62637674bf50a"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "82ad975242292d5875780b4398b62637674bf50a"
package = "azalea-client"

[dependencies.common]
path = "../../common"