[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.48.0"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "ca70e5e321a3c174c53d0650feed84db471ac30d"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "ca70e5e321a3c174c53d0650feed84db471ac30d"
package = "azalea-client"

[dependencies.common]
path = "../../common"