[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = "1.41.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "ea5a1c1ec128cc1a33593c9d91ef758c3fb73e16"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "ea5a1c1ec128cc1a33593c9d91ef758c3fb73e16"
package = "azalea-client"
