[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "PLACEHOLDER_COMMIT_HASH" }
azalea-protocol = { git = "https://github.com/azalea-rs/azalea", rev = "PLACEHOLDER_COMMIT_HASH" }
azalea-client = { git = "https://github.com/azalea-rs/azalea", rev = "PLACEHOLDER_COMMIT_HASH" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }