[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = "1.45.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "df9d776ff8e3945ce7d367e6cecb54957ee0fd7a"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "df9d776ff8e3945ce7d367e6cecb54957ee0fd7a"
package = "azalea-client"

[dependencies.common]
path = "../../common"