[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "0ec25dc45ec912bd9ef07ed9107f968de55f4a18"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "0ec25dc45ec912bd9ef07ed9107f968de55f4a18"
package = "azalea-client"

[dependencies.common]
path = "../../common"