[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "5952fc0e57ef9b0a2f8a3582049eb2000d3fa8f4"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "5952fc0e57ef9b0a2f8a3582049eb2000d3fa8f4"
package = "azalea-client"

[dependencies.common]
path = "../../common"