[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "e2ed19c1ed92f0dccc881d835d9ac6e0f7f834c0"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "e2ed19c1ed92f0dccc881d835d9ac6e0f7f834c0"
package = "azalea-client"

[dependencies.common]
path = "../../common"