[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "2b9c453ade60bf4a37e2d77059641dc81b011be0"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "2b9c453ade60bf4a37e2d77059641dc81b011be0"
package = "azalea-client"

[dependencies.common]
path = "../../common"