[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "4a9e6d2c4b5cedfbe1105f4f5d68933a0cbf8214"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "4a9e6d2c4b5cedfbe1105f4f5d68933a0cbf8214"
package = "azalea-client"

[dependencies.common]
path = "../../common"