[package]
name = "flex-update-mc-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"

[dependencies.azalea-protocol]
git = "https://github.com/azalea-rs/azalea"
rev = "17416abd1bd1dfffafb8bb9c0407b6373631e483"
package = "azalea-protocol"

[dependencies.azalea-client]
git = "https://github.com/azalea-rs/azalea"
rev = "17416abd1bd1dfffafb8bb9c0407b6373631e483"
package = "azalea-client"

[dependencies.common]
path = "../../common"